--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -95,6 +95,10 @@
     <%= f.label :heat_included %><br />
     <%= f.check_box :heat_included %>
   </div>
+  <div class="field">
+    <%= f.label :photo_url %><br />
+    <%= f.text_area :photo_url %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
