--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,62 +1,79 @@
-<h1>Listing listings</h1>
-
-<table>
+<fieldset class='outer'>
+    <legend>Your Results</legend>
+<!-- <table>
   <tr>
+    <th>Unit description</th>
     <th>Address</th>
-    <th>Unit number</th>
+    <th>Beds</th>
+    <th>Bath</th>
+    <th>Available</th>
+    <th>Price</th>
+    <!-- <th>Unit number</th>
     <th>City</th>
     <th>State</th>
     <th>Zip</th>
     <th>Country</th>
     <th>Latitude</th>
-    <th>Longitude</th>
-    <th>Available</th>
-    <th>Bath</th>
-    <th>Building description</th>
+    <th>Longitude</th> -->
+    
+    
+    <!-- <th>Building description</th>
     <th>Landlord</th>
     <th>Laundry</th>
     <th>Parking</th>
     <th>Cats</th>
-    <th>Dogs</th>
-    <th>Price</th>
-    <th>Showing instructions</th>
-    <th>Unit description</th>
+    <th>Dogs</th> -->
+    
+    <!-- <th>Showing instructions</th>
+    
     <th>Utilities included</th>
     <th>Heat included</th>
     <th></th>
     <th></th>
-    <th></th>
-  </tr>
+    <th></th> -->
+  <!-- </tr> --> 
 
-<% @listings.each do |listing| %>
-  <tr>
-    <td><%= listing.address %></td>
-    <td><%= listing.unit_number %></td>
-    <td><%= listing.city %></td>
-    <td><%= listing.state %></td>
-    <td><%= listing.zip %></td>
+<%  @listings.each do |listing| %>
+    <fieldset>
+<div class='attributes'>
+   <p><%= listing.unit_description %></p>
+   <p><%= listing.address %></p>
+   <p><%= listing.beds %> Beds</p>
+   <p><%= listing.bath %> Baths</p>
+   <p>Available <%= listing.available %></p>
+   <p>Rent $<%= listing.price %></p>
+</div>
+
+<div class='photo'>
+    <p><%= image_tag(listing.photo_url)%>
+</div>
+    <%= link_to 'Show', listing %>
+    <!-- <td><%= listing.unit_number %></td> -->
+    <!-- <td><%= listing.city %></td>
+    <td><%= listing.state %></td> -->
+    <!-- <td><%= listing.zip %></td>
     <td><%= listing.country %></td>
     <td><%= listing.latitude %></td>
-    <td><%= listing.longitude %></td>
-    <td><%= listing.available %></td>
-    <td><%= listing.bath %></td>
-    <td><%= listing.building_description %></td>
+    <td><%= listing.longitude %></td> -->
+    
+    
+    <!-- <td><%= listing.building_description %></td>
     <td><%= listing.landlord_id %></td>
     <td><%= listing.laundry %></td>
     <td><%= listing.parking %></td>
     <td><%= listing.cats %></td>
-    <td><%= listing.dogs %></td>
-    <td><%= listing.price %></td>
-    <td><%= listing.showing_instructions %></td>
-    <td><%= listing.unit_description %></td>
+    <td><%= listing.dogs %></td> -->
+    
+    <!-- <td><%= listing.showing_instructions %></td>
+    
     <td><%= listing.utilities_included %></td>
-    <td><%= listing.heat_included %></td>
-    <td><%= link_to 'Show', listing %></td>
+    <td><%= listing.heat_included %></td> -->
+    
     <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
     <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  </fieldset>
 <% end %>
-</table>
+</fieldset>
 
 <br />
 
