--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -10,10 +10,14 @@
 }
 
 fieldset {
-	width:750px;
+	width:650px;
 	margin: auto auto auto auto;
 }
 
 .outer {
-	width: 800px;
+	width: 700px;
+}
+
+.map {
+	float: right;
 }
