--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,37 +1,18 @@
+<div class='search'>
+    <form id="searchbox" action="">
+    <input id="search" type="text" placeholder="City, Neighborhood, Zip">
+    <input id="submit" type="submit" value="Search">
+</form>
+</div>
+
+    
+
+
+
+
+<div class='page'>
 <fieldset class='outer'>
     <legend>Your Results</legend>
-<!-- <table>
-  <tr>
-    <th>Unit description</th>
-    <th>Address</th>
-    <th>Beds</th>
-    <th>Bath</th>
-    <th>Available</th>
-    <th>Price</th>
-    <!-- <th>Unit number</th>
-    <th>City</th>
-    <th>State</th>
-    <th>Zip</th>
-    <th>Country</th>
-    <th>Latitude</th>
-    <th>Longitude</th> -->
-    
-    
-    <!-- <th>Building description</th>
-    <th>Landlord</th>
-    <th>Laundry</th>
-    <th>Parking</th>
-    <th>Cats</th>
-    <th>Dogs</th> -->
-    
-    <!-- <th>Showing instructions</th>
-    
-    <th>Utilities included</th>
-    <th>Heat included</th>
-    <th></th>
-    <th></th>
-    <th></th> -->
-  <!-- </tr> --> 
 
 <%  @listings.each do |listing| %>
     <fieldset>
@@ -48,26 +29,7 @@
     <p><%= image_tag(listing.photo_url)%>
 </div>
     <%= link_to 'Show', listing %>
-    <!-- <td><%= listing.unit_number %></td> -->
-    <!-- <td><%= listing.city %></td>
-    <td><%= listing.state %></td> -->
-    <!-- <td><%= listing.zip %></td>
-    <td><%= listing.country %></td>
-    <td><%= listing.latitude %></td>
-    <td><%= listing.longitude %></td> -->
-    
-    
-    <!-- <td><%= listing.building_description %></td>
-    <td><%= listing.landlord_id %></td>
-    <td><%= listing.laundry %></td>
-    <td><%= listing.parking %></td>
-    <td><%= listing.cats %></td>
-    <td><%= listing.dogs %></td> -->
-    
-    <!-- <td><%= listing.showing_instructions %></td>
-    
-    <td><%= listing.utilities_included %></td>
-    <td><%= listing.heat_included %></td> -->
+   
     
     <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
     <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -76,5 +38,14 @@
 </fieldset>
 
 <br />
+<div class='map'>
+<%= gmaps({
+        "map_options" => { "type" => "ROADMAP", "center_longitude" => -87.63, "center_latitude" => 41.90, "zoom" => 13, "auto_adjust" => true},
+        "markers" => { "data" => @markers }
+        })
+        %>
+      
+</div>
 
+</div>
 <%= link_to 'New Listing', new_listing_path %>
