Added wishlist join model and displayed wishlist in user show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,15 @@
 
 		<% if session["user_id"] %>
 		Hello, <%= User.find(session[:user_id]).name %>!
-			<%= link_to "Sign Out", "/logout" %>
+			<%= link_to "Sign Out", "/logout" %> |
+			<%= link_to 'My Profile', user_url(session[:user_id]) %> |
 		<% else %>
-			<%= link_to "Sign In", "/login" %>
+			<%= link_to "Sign In", "/login" %> |
 		<% end %>
+		<%= link_to 'Sign Up!', new_user_url %>
 	</ul>
+
+
 </nav>
 
 <%= yield %>
