Users can add listings to their wishlist from the index page, added home link to nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 <nav>
 	<ul>
-
+		<%= link_to 'Home', root_url %> |
 		<% if session["user_id"] %>
 		Hello, <%= User.find(session[:user_id]).name %>!
 			<%= link_to "Sign Out", "/logout" %> |
