--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -23,6 +23,13 @@
    <p><%= listing.bath %> Baths</p>
    <p>Available <%= listing.available %></p>
    <p>Rent $<%= listing.price %></p>
+   <p><%= simple_form_for @wishlist do |f| %></p>
+   <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
+   <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
+   <%= f.submit 'Add to My Wishlist' %>
+
+
+    <% end %>
 </div>
 
 <div class='photo'>
