User can destroy wish list item from user profile page

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -26,7 +26,7 @@
    <p><%= simple_form_for @wishlist do |f| %></p>
    <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
    <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
-   <%= f.submit 'Add to My Wishlist' %>
+   <%= f.submit 'Add To My Wish List' %>
 
 
     <% end %>
