--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -6,12 +6,14 @@
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 300px;
+  width: 400px;
+  margin-right: 10px
 }
 
 .gmaps4rails_map {
-  width: 300px;
-  height: 400px;
+  width: 400px;
+  height: 600px;
+  margin-right: 10px
 }
 
 .bing_map {
@@ -22,3 +24,4 @@
    height: 400px;
    border:#555555 2px solid;
 }
+
