--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,110 +1,85 @@
 <p id="notice"><%= notice %></p>
+<div class='unitshow'
+  <p>
+    <b>Address:</b>
+    <%= @listing.address %>
+    <%= @listing.city %>, <%= @listing.state %> <%= @listing.zip %>
+  </p>
+  
+  <p>
+    <b>Unit number:</b>
+    <%= @listing.unit_number %>
+  </p>
+  
+  <p>
+    <b>Baths:</b>
+    <%= @listing.bath %>
+  </p>
+  
+   <p>
+    <b>Beds:</b>
+    <%= @listing.beds %>
+  </p> 
+  
+  <p>
+    <b>Available:</b>
+    <%= @listing.available %>
+  </p>
+  
+  
+  
+  <p>
+    <b>Landlord:</b>
+    <%= @listing.landlord_id %>
+  </p>
+  
+  <p>
+    <b>Laundry:</b>
+    <%= @listing.laundry %>
+  </p>
+  
+  <p>
+    <b>Parking:</b>
+    <%= @listing.parking %>
+  </p>
+  
+  <p>
+    <b>Cats:</b>
+    <%= @listing.cats %>
+  </p>
+  
+  <p>
+    <b>Dogs:</b>
+    <%= @listing.dogs %>
+  </p>
+  
+  <p>
+    <b>Price:</b>
+    <%= @listing.price %>
+  </p>
+  
+  <p>
+    <b>Showing instructions:</b>
+    <%= @listing.showing_instructions %>
+  </p>
+  
+  <p>
+    <b>Unit description:</b>
+    <%= @listing.unit_description %>
+  </p>
+  
+  <p>
+    <b>Utilities included:</b>
+    <%= @listing.utilities_included %>
+  </p>
+  
+  <p>
+    <b>Heat included:</b>
+    <%= @listing.heat_included %>
+  </p>
+</div>
 
-<p>
-  <b>Address:</b>
-  <%= @listing.address %>
-</p>
-
-<p>
-  <b>Unit number:</b>
-  <%= @listing.unit_number %>
-</p>
-
-<p>
-  <b>City:</b>
-  <%= @listing.city %>
-</p>
-
-<p>
-  <b>State:</b>
-  <%= @listing.state %>
-</p>
-
-<p>
-  <b>Zip:</b>
-  <%= @listing.zip %>
-</p>
-
-<p>
-  <b>Country:</b>
-  <%= @listing.country %>
-</p>
-
-<p>
-  <b>Latitude:</b>
-  <%= @listing.latitude %>
-</p>
-
-<p>
-  <b>Longitude:</b>
-  <%= @listing.longitude %>
-</p>
-
-<p>
-  <b>Available:</b>
-  <%= @listing.available %>
-</p>
-
-<p>
-  <b>Bath:</b>
-  <%= @listing.bath %>
-</p>
-
-<p>
-  <b>Building description:</b>
-  <%= @listing.building_description %>
-</p>
-
-<p>
-  <b>Landlord:</b>
-  <%= @listing.landlord_id %>
-</p>
-
-<p>
-  <b>Laundry:</b>
-  <%= @listing.laundry %>
-</p>
-
-<p>
-  <b>Parking:</b>
-  <%= @listing.parking %>
-</p>
-
-<p>
-  <b>Cats:</b>
-  <%= @listing.cats %>
-</p>
-
-<p>
-  <b>Dogs:</b>
-  <%= @listing.dogs %>
-</p>
-
-<p>
-  <b>Price:</b>
-  <%= @listing.price %>
-</p>
-
-<p>
-  <b>Showing instructions:</b>
-  <%= @listing.showing_instructions %>
-</p>
-
-<p>
-  <b>Unit description:</b>
-  <%= @listing.unit_description %>
-</p>
-
-<p>
-  <b>Utilities included:</b>
-  <%= @listing.utilities_included %>
-</p>
-
-<p>
-  <b>Heat included:</b>
-  <%= @listing.heat_included %>
-</p>
-
+  <%= image_tag(@listing.photo_url)%>
 
 <%= link_to 'Edit', edit_listing_path(@listing) %> |
 <%= link_to 'Back', listings_path %>
