used grid to pull map next to results

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,16 +1,14 @@
-<div class='search'>
+<div class='conatainer_12'>
+<div class='grid_1'>
     <form id="searchbox" action="">
     <input id="search" type="text" placeholder="City, Neighborhood, Zip">
     <input id="submit" type="submit" value="Search">
 </form>
 </div>
-
+<!-- searchbox -->
     
-
-
-
-
-<div class='page'>
+<!-- listing results -->
+<div class='grid_6'>
   <div class='centerblock'>
     <fieldset class='outer'>
       <legend>Your Results</legend>
@@ -18,26 +16,24 @@
     <fieldset>
 
 
-<div class='attributes'>
-   <p><%= listing.unit_description %></p>
-   <p><%= listing.address %></p>
-   <p><%= listing.beds %> Beds</p>
-   <p><%= listing.bath %> Baths</p>
-   <p>Available <%= listing.available %></p>
-   <p>Rent $<%= listing.price %></p>
-   <p><%= simple_form_for @wishlist do |f| %></p>
-   <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
-   <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
-   <%= f.submit 'Add To My Wish List' %>
+  <div class='attributes'>
+      <p><%= listing.unit_description %></p>
+      <p><%= listing.address %></p>
+      <p><%= listing.beds %> Beds</p>
+      <p><%= listing.bath %> Baths</p>
+      <p>Available <%= listing.available %></p>
+      <p>Rent $<%= listing.price %></p>
+      <p><%= simple_form_for @wishlist do |f| %></p>
+      <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
+      <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
+      <%= f.submit 'Add To My Wish List' %>
+      <% end %>
+  </div>
 
-
-    <% end %>
-</div>
-
-
-<div class='photo'>
+<!-- unit photo -->
+  <div class='photo'>
     <p><%=link_to image_tag(listing.photo_url), listing%>
-</div>
+  </div>
     <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
     <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </fieldset>
@@ -46,15 +42,15 @@
   </div>
 </div>
 
-<br />
-<div class='map'>
-<%= gmaps({
-        "map_options" => { "type" => "ROADMAP", 'detect_location' => true , 'center_on_user' => true , "zoom" => 13, "auto_adjust" => false },
-        "markers" => { "data" => @markers }
-        })
-        %>
+  <div class='grid_5'>
+    <%= gmaps({
+            "map_options" => { "type" => "ROADMAP", 'detect_location' => true , 'center_on_user' => true , "    zoom" => 13, "auto_adjust" => false },
+            "markers" => { "data" => @markers }
+            })
+            %>
       
+  </div>
+  </div>
 </div>
 
-</div>
-<%= link_to 'New Listing', new_listing_path %>
+  <!-- <%= link_to 'New Listing', new_listing_path %> -->
