removed layout from landings home and listings

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -3,6 +3,8 @@
 
 @import "base";
 @import "mixins";
+@import 'sassybuttons';
+
 /* -------------------------------------------------------------------------*/
 /* Layout */
 
