--- a/app/views/landings/listings.html.erb
+++ b/app/views/landings/listings.html.erb
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>Demo</title>
-  <script type="text/javascript" src="assets/jquery_1_8_3.js"></script>
-  <script type="text/javascript" src="assets/jquery_1_9_1.js"></script>
-  <script type="text/javascript" src="assets/slide.js"></script>
-  <link rel="stylesheet" href="assets/screen.css" />
+  <script type="text/javascript" src="/assets/jquery_1_8_3.js"></script>
+  <script type="text/javascript" src="/assets/jquery_1_9_1.js"></script>
+  <script type="text/javascript" src="/assets/slide.js"></script>
+  <%= stylesheet_link_tag    "styles", :media => "all" %>
+  <%= javascript_include_tag "application" %>
 </head>
 <body>
   </script>
