--- a/app/views/landings/listings.html.erb
+++ b/app/views/landings/listings.html.erb
@@ -14,18 +14,18 @@
 <header>
   <div class="logo">Logo</div>
   <nav>
-    <div class="navbar">
-      Find Apartment | My Favorites | Wish List | List Apartment
-    </div>
-    <div class="login">
-    USER ID | MY PROFILE | LOGIN
-    </div>
+      <ul>
+      <li><a href="#">Find Apartment</a></li>
+      <li><a href="#">My Favorites</a></li>
+      <li><a href="#">Wish List</a></li>
+      <li><a href="#">List Apartment</a></li>
+    </ul>
   </nav>
 </header>
   <section id="wrapper">
     <div class='search'>
   <form id="searchbox" action="">
-    <input id="search" type="text" class="searchbar" placeholder="City, Neighborhood, Zip">&nbsp&nbsp&nbsp&nbsp #BEDS + - &nbsp&nbsp&nbsp&nbsp <input id="search" type="text" class="bedbathbar" placeholder="Beds"> &nbsp&nbsp&nbsp&nbsp #BATHS + - &nbsp&nbsp&nbsp&nbsp <input id="search" type="text" class="bedbathbar" placeholder="Baths"> &nbsp&nbsp&nbsp&nbsp RENT <----O-----O----> &nbsp&nbsp&nbsp&nbsp
+    <input id="search" type="text" class="searchbar" placeholder="City, Neighborhood, Zip">&nbsp&nbsp #BEDS + - &nbsp&nbsp <input id="search" type="text" class="bedbathbar" placeholder="Beds"> &nbsp&nbsp&nbsp&nbsp #BATHS + - &nbsp&nbsp <input id="search" type="text" class="bedbathbar" placeholder="Baths"> &nbsp&nbsp RENT <----O-----O----> &nbsp&nbsp&nbsp&nbsp
     <input id="submit" type="submit" class="btn-search" value="Find Apartments">
   </form>
 </div>
@@ -71,7 +71,7 @@
       <div class="listbody">
         <div class="listholder">
          <div class='list-photo'>
-        <img src="img/apt2.jpeg" class="listpic" alt="Photo" />
+        <img src="/assets/apt2.jpeg" class="listpic" alt="Photo" />
          </div>
          <div class="list-details">
           <div class="list-desc">
@@ -88,7 +88,7 @@
        </div>
         <div class="listholder">
          <div class='list-photo'>
-                <img src="img/apt1.jpeg" class="listpic" alt="Photo" />
+                <img src="/assets/apt1.jpeg" class="listpic" alt="Photo" />
          </div>
          <div class="list-details">
           <div class="list-desc">
@@ -105,7 +105,7 @@
        </div>
                     <div class="listholder">
          <div class='list-photo'>
-                <img src="img/apt1.jpeg" class="listpic" alt="Photo" />
+                <img src="/assets/apt1.jpeg" class="listpic" alt="Photo" />
          </div>
          <div class="list-details">
           <div class="list-desc">
@@ -122,7 +122,7 @@
        </div>
                     <div class="listholder">
          <div class='list-photo'>
-                <img src="img/apt1.jpeg" class="listpic" alt="Photo" />
+                <img src="/assets/apt1.jpeg" class="listpic" alt="Photo" />
          </div>
          <div class="list-details">
           <div class="list-desc">
@@ -139,7 +139,7 @@
        </div>
                      <div class="listholder">
          <div class='list-photo'>
-                <img src="img/apt1.jpeg" class="listpic" alt="Photo" />
+                <img src="/assets/apt1.jpeg" class="listpic" alt="Photo" />
          </div>
          <div class="list-details">
           <div class="list-desc">
