--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -16,7 +16,6 @@ body{
 	margin: 0;
   	background-image: url(/assets/black_wood.jpg);
   	background-size: cover;
-	/*background: #240b07;*/
 	padding: 0;
 	height: 100%;
 }
@@ -32,7 +31,7 @@ body{
 header {
 	@include span-columns(12,12);
   	@include text-shadow(1px, 1px, 2px, #000);
-	height: 75px;
+	height: 100px;
 	width: 100%;
 	padding: 0;
 	color: white;
@@ -43,13 +42,18 @@ header {
 	@include span-columns(2,12);
 	float: left;
 	margin: 0 auto;
+	color: white;
+	margin-top: 30px;
+	margin-left: 30px;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 
 .search {
 	@include span-columns(12,12);
 	@include box-shadow(1px, 1px, 1px, 1px, #ccc);
 	@include text-shadow(1px, 1px, 1px, #ccc);
-	background: lighten(#4ba3cc, 20px%);
+	background: #ccc;	
 	margin: 0 auto;
 	color: #000;
 	font-size: 12px;
@@ -58,17 +62,18 @@ header {
 	padding-bottom: 5px;
 }
 
-.searchbar {
+#search {
 	@include span-columns(2	,12);
 	@include rounded-corners(7px);
 	height: 20px;
 	padding: 2px;
 	margin: 1px;
+	margin-left: 5px;
 }
 
-.bedbathbar {
+#bedbathbar {
 	@include rounded-corners(7px);
-	width: 50px;
+	width: 60px;
 	height: 20px;
 	padding: 2px;
 	margin: 1px;
@@ -87,13 +92,7 @@ section {
 .btn-search {
 	@include sassy-button("matte", 5px, 19px, #cede85, #a7bf35, #fff, "inset");
 	font-size: 14px;
-}
-
-.login {
-	@include span-columns(3,10);
-	float: right;
-	margin: 0 auto;
-	text-align: right;
+	margin-left: 20px;
 }
 
 .avail {
@@ -145,15 +144,14 @@ section {
 	font-size: 12px;
 }
 
-.maphead {
-	@include span-columns(4,4);
-	height: 25px;
-	margin-right: 0px;
-	text-align: left;
-	padding: 2px;
-	font-size: 12px;
+.logotrans {
+	color: white;
+	opacity: .45;
 }
 
+.logorent {
+	color: #CC1100;
+}
 
 .listings-set {
 	@include span-columns(10,12);
@@ -170,40 +168,28 @@ section {
 }
 
 .listbody {
-	margin-top: 25px;
-}
-
-.list-map {
-	@include span-columns(4,10);
-	@include rounded-corners(7px);
-	@include box-shadow(1px, 1px, 1px, 1px, #ccc);
-	top: 0;
-	right: 0;
-	float: right;
-	margin: 0 auto;
-	position: relative;
-	height: 690px;
+	margin-top: 35px;
 }
 
 .list-photo {
-	@include span-columns(1.5,6);
-	height: auto;
-	float: left;
+	@include span-columns(2,6);
+	max-width: 225px;
 }
 
 .listholder {
 	@include rounded-corners(7px);
 	@include box-shadow(1px, 1px, 1px, 1px, #ccc);
-	height: 125px;
 	background: white;
+	height: 125px;
 	margin-bottom: 10px;
 }
 
 .listpic {
+	@include rounded-corners(7px);
 	width: 85%;
-	height: 85%;
-	margin: 0;
-	padding: 5px;
+	max-width: 215px;
+	min-width: 125px;
+	height: 100%;
 }
 
 .list-details {
@@ -216,14 +202,15 @@ section {
 .list-rent {
 	@include span-columns(1,6);
 	float: right;
-	margin: 15px auto;
+	margin: 25px auto;
 	font-size: 16px;
 	text-align: center;
 }
 
 .btn-rent {
-	@include sassy-button("shiny", 5px, 12px, #e86a43);
-	@include sassy-button-style("inset", #e86a43);
+	margin-top: 10px;
+	@include sassy-button("shiny", 5px, 12px, #CC1100);
+	@include sassy-button-style("inset", #CC1100);
 }
 
 .map-btns {
@@ -237,6 +224,10 @@ section {
 	width: 50px;
 	border: 0;
 	padding: 0;
+}
+
+.btn-wish {
+@include sassy-button("flat", 5px, 12px, #4ba3cc)
 }
 
 .arrow-right {
@@ -458,8 +449,6 @@ footer {
 nav {
 	@include span-columns(10,12);
 	float: right;
-	float: right;
-	height: 40px;
 	margin-top: -20px;
 	padding: 6px;
 	-moz-border-radius: 6px;
@@ -474,9 +463,13 @@ nav {
 				inset 0 -1px 0 rgba(255,255,255,0.15);
 }
 
-nav li { display: inline;	}
+.navbar {
+	@include span-columns(7,10);
+}
 
-nav li a {
+.navbar li { display: inline;	}
+
+.navbar li a {
 	@include rounded-corners(7px);
 	color: #8c8c8c;
 	font-weight: bold;
@@ -511,7 +504,7 @@ nav li a {
 	text-decoration: none;
 }
 	
-nav li.active a {
+.navbar li.active a {
 	@include rounded-corners(7px);
 	background: #7f9b15 url("../images/noise.jpg") repeat 0 0;
 	background: url("/assets/noise.png") 0 0 repeat,
@@ -538,14 +531,14 @@ nav li.active a {
 				0 2px 4px rgba(0,0,0,0.6);
 }
 
-nav li.contact a {
+.navbar li.contact a {
 	margin-right: 0;
 	-moz-border-radius: 0 4px 4px 0;
 	-webkit-border-radius: 0 4px 4px 0;
 	border-radius: 0 4px 4px 0;
 }
 
-nav li a span {
+.navbar li a span {
 	background: transparent url("/assets/nav.png") 0 -23px no-repeat;
 	display: block;
 	text-indent: -9999px;
@@ -553,6 +546,17 @@ nav li a span {
 	height: 23px;
 	margin: 8px 0;
 	opacity: 1;
+}
+
+.login {
+	@include span-columns(3,10);
+	float: right;
+	margin: 0 auto;
+	text-align: right;
+}
+
+.login a {
+	text-decoration: none;
 }
 
 #contact {
@@ -659,11 +663,50 @@ nav li a span {
 	margin-top: 100px;
 }
 
+.map_container {
+  margin-top: 25px;
+  border-width: 0px;
+  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+  width: 100%;
+}
 
+.gmaps4rails_map {
+  width: 100%;
+  height: 660px;
+}
 
+.bing_map {
+   position: absolute;
+   top: 20;
+   left: 10;
+   width: 400px;
+   height: 400px;
+   border:#555555 2px solid;
+}
 
+.list-map {
+	margin-top: 25px;
+	@include span-columns(4,10);
+	@include rounded-corners(7px);
+	@include box-shadow(1px, 1px, 1px, 1px, #ccc);
+	top: 0;
+	right: 0;
+	float: right;
+	margin: 0 auto;
+	position: relative;
+	height: 660px;
+}
 
-
+.maphead {
+	@include span-columns(4,4);
+	height: 25px;
+	margin-right: 0px;
+	text-align: left;
+	padding: 2px;
+	font-size: 12px;
+}
 
 
 
