--- a/app/views/landings/listings.html.erb
+++ b/app/views/landings/listings.html.erb
@@ -25,8 +25,17 @@
   <section id="wrapper">
     <div class='search'>
   <form id="searchbox" action="">
-    <input id="search" type="text" class="searchbar" placeholder="City, Neighborhood, Zip">&nbsp&nbsp #BEDS + - &nbsp&nbsp <input id="search" type="text" class="bedbathbar" placeholder="Beds"> &nbsp&nbsp&nbsp&nbsp #BATHS + - &nbsp&nbsp <input id="search" type="text" class="bedbathbar" placeholder="Baths"> &nbsp&nbsp RENT <----O-----O----> &nbsp&nbsp&nbsp&nbsp
-    <input id="submit" type="submit" class="btn-search" value="Find Apartments">
+      <%= form_tag listings_path, :method => 'get' do %>
+      <!-- search bar id is in text field tag -->
+      <%= text_field_tag :search, params[:search], :placeholder => 'City, Zip, Neighborhood'%>
+      <%= submit_tag 'Find Apartments', :class=> 'btn-search', :name => nil %>
+
+      <%= text_field_tag :bedbathbar, params[:search], :placeholder => '# of Beds'%>
+      <%= submit_tag 'Submit', :class=> 'btn-search', :name => nil%>
+
+      <%= text_field_tag :bedbathbar, params[:search], :placeholder => '# of Baths'%>
+      <%= submit_tag 'Submit', :class=> 'btn-search', :name => nil %>
+      <% end %>
   </form>
 </div>
     <div class="options">
@@ -159,7 +168,11 @@
         </div>
       <div class='list-map'>
         <div class="maphead"><div id="map-arrow" class="arrow-left"><a href="#" class="mapleft" onclick="slidePanel('open')"><</a><a href="#" class="mapright" onclick="slidePanel('close')">></a></div></div>
-        <div class='map'><iframe id="mapframe" width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Merchandise+Mart+Properties,+Inc.,+222+Merchandise+Mart+Plaza,+Chicago,+IL&amp;aq=0&amp;oq=merch&amp;sll=39.402244,-89.274902&amp;sspn=10.216592,19.753418&amp;ie=UTF8&amp;hq=Merchandise+Mart+Properties,+Inc.,+222+Merchandise+Mart+Plaza,+Chicago,+IL&amp;ll=41.888509,-87.635409&amp;spn=0.016613,0.032015&amp;t=m&amp;output=embed"></iframe></div>
+        <div class='map'>      <%= gmaps({
+            "map_options" => { "type" => "ROADMAP", 'detect_location' => true , 'center_on_user' => true , "    zoom" => 13, "auto_adjust" => false },
+            "markers" => { "data" => @markers }
+            })
+            %></div>
       </div>
     </div>
   </section>
