--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,62 +1,102 @@
-<div class='conatainer_12'>
-<div class='grid_1'>
-  <%= form_tag listings_path, :method => 'get' do %>
-<p>
-  <%= text_field_tag :search, params[:search]%>
-  <%= submit_tag 'search', :name => nil %>
-</p>
-<% end %>
-    <!-- <form id="searchbox" action="">
-    <input id="search" type="text" placeholder="City, Neighborhood, Zip">
-    <input id="submit" type="submit" value="Search">
-</form> -->
-</div>
-<!-- searchbox -->
-    
-<!-- listing results -->
-<div class='grid_6'>
-  <div class='centerblock'>
-    <fieldset class='outer'>
-      <legend>Your Results</legend>
-      <%  @listings.each do |listing| %>
-    <fieldset>
+  <section id="wrapper">
+      <div class='search'>
+        <form id="searchbox" action="">
+          <%= form_tag listings_path, :method => 'get' do %>
+          <!-- search bar id is in text field tag -->
+          <%= text_field_tag :search, params[:search], :placeholder => 'City, Zip, Neighborhood'%>
+          <%= submit_tag 'Find Apartments', :class=> 'btn-search', :name => nil %>
 
+          <%= text_field_tag :bedbathbar, params[:search], :placeholder => '# of Beds'%>
+          <%= submit_tag 'Submit', :class=> 'btn-search', :name => nil%>
 
-  <div class='attributes'>
-      <p><%= listing.unit_description %></p>
-      <p><%= listing.address %></p>
-      <p><%= listing.beds %> Beds</p>
-      <p><%= listing.bath %> Baths</p>
-      <p>Available <%= listing.available %></p>
-      <p>Rent $<%= listing.price %></p>
-      <p><%= simple_form_for @wishlist do |f| %></p>
-      <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
-      <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
-      <%= f.submit 'Add To My Wish List' %>
-      <% end %>
-  </div>
-
-<!-- unit photo -->
-  <div class='photo'>
-    <p><%=link_to image_tag(listing.photo_url), listing%>
-  </div>
-    <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-    <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </fieldset>
-<% end %>
-</fieldset>
-  </div>
-</div>
-
-  <div class='grid_5'>
-    <%= gmaps({
-            "map_options" => { "type" => "ROADMAP", 'detect_location' => true , 'center_on_user' => true , "    zoom" => 13, "auto_adjust" => false },
-            "markers" => { "data" => @markers }
-            })
-            %>
-      
-  </div>
-  </div>
-</div>
-
-  <!-- <%= link_to 'New Listing', new_listing_path %> -->
+          <%= text_field_tag :bedbathbar, params[:search], :placeholder => '# of Baths'%>
+          <%= submit_tag 'Submit', :class=> 'btn-search', :name => nil %>
+          <% end %>
+        </form>
+    </div>
+      <div class="options">
+        <div class="optionhead"><div id="option-arrow" class="arrow-left"><a href="#" class="arr-left" onclick="slidePaneloption('open')"><</a><a href="#" class="arr-right" onclick="slidePaneloption('close')">></a></div></div>
+          <div class="optionbody">
+            <table>
+              <tr>
+                  <th></th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+              </tr>
+              <tr>
+                  <td>Type</td>
+                  <td><input type="checkbox" name="row-1" data-col="1"></td>
+                  <td><input type="checkbox" name="row-1" data-col="2"></td>
+                  <td><input type="checkbox" name="row-1" data-col="3"></td>
+              </tr>
+              <tr>
+                  <td>Features</td>
+                  <td><input type="checkbox" name="row-2" data-col="1"></td>
+                  <td><input type="checkbox" name="row-2" data-col="2"></td>
+                  <td><input type="checkbox" name="row-2" data-col="3"></td>
+              </tr>
+              <tr>
+                  <td>List Date</td>
+                  <td><input type="checkbox" name="row-3" data-col="1"></td>
+                  <td><input type="checkbox" name="row-3" data-col="2"></td>
+                  <td><input type="checkbox" name="row-3" data-col="3"></td>
+            </tr>
+                    <tr>
+                  <td>Pets</td>
+                  <td><input type="checkbox" name="row-3" data-col="1"></td>
+                  <td><input type="checkbox" name="row-3" data-col="2"></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    <div class="listings-set">
+        <div class="listing">
+            <div class="listhead"># of Results | Sort by: Rent Distance Availability</div>
+            <div class="listbody">
+              <%  @listings.each do |listing| %>
+                <div class="listholder">
+                  <div class="list-photo">
+                  <%=link_to image_tag(listing.photo_url, :class=> 'listpic'), listing%>
+                  </div>
+                  <div class="list-details">
+                    <div class="list-desc">
+                      <strong>Description:</strong><%= listing.unit_description %><br>
+                      <strong>Address:</strong> <%= listing.address %><br>
+                      <strong>Beds:</strong> <%= listing.beds %> |  
+                      <strong>Baths:</strong> <%= listing.bath %><br><br>
+                              <%= simple_form_for @wishlist do |f| %>
+                      <%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
+                      <%= f.hidden_field :listing_id, value: "#{listing.id}" %>
+                      <%= f.submit 'Wish', :class=> 'btn-wish' %>
+                    <% end %>
+                      <%= link_to 'Edit', edit_listing_path(listing) %>
+                      <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </div>
+                  </div>
+                  <div class="list-rent">
+                      <strong>$<%= listing.price %></strong><br>
+                      <input id="submit" type="submit" class="btn-rent" value="Rent"><br>
+                      <span class="avail"><strong>Avl:</strong> <%= listing.available %></span>
+                  </div>
+               </div>
+           <% end %>
+             <div class="listfoot">Listings # 1 of 2</div>
+        </div>
+      </div>
+      <div class='list-map'>
+          <div class="maphead">
+            <div id="map-arrow" class="arrow-left">
+              <a href="#" class="mapleft" onclick="slidePanel('open')"><</a>
+              <a href="#" class="mapright" onclick="slidePanel('close')">></a>
+            </div>
+          </div>
+          <div class='map'>   
+            <%= gmaps({
+                  "map_options" => { "type" => "ROADMAP", 'detect_location' => true , 'center_on_user' => true , "zoom" => 13, "auto_adjust" => false },"markers" => { "data" => @markers }
+                  })
+                %>
+          </div>
+      </div>
+    </div>
+    </section>
