--- a/app/views/listings/index2.html.erb
+++ b/app/views/listings/index2.html.erb
@@ -76,7 +76,7 @@
 				           	  	<%= simple_form_for @wishlist do |f| %>
 				      		  	<%= f.hidden_field :user_id, value: "#{session[:user_id]}" %>
 				      		  	<%= f.hidden_field :listing_id, value: "#{listing.id}" %>
-				      	      	<%= f.submit 'Wish', :class=> 'btn-wish' %>
+				      	      	<%= f.submit 'Add To My Wish List' %>
 				        		<% end %>
 				         	</div>
 				       </div>
@@ -100,7 +100,3 @@
 			</div>
 		</div>
 	  </section>
-	</div>
-	<footer>footer</footer>
-</body>
-</html>
